fixed input layout for buttons, fixed logout, and restyled. centered menu on small screens

--- a/public/stylesheets/auth.sass
+++ b/public/stylesheets/auth.sass
@@ -1,9 +1,10 @@
 .login-form
 	width: 20rem
-	max-width: 50%
+	max-width: 70%
 	margin: auto
 	display: block
 	padding-top: 10px
 
+
 #reset
-	margin-left: 2rem
+	margin-right: auto
